# main.go
@@ -9,10 +9,10 @@ import (
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
 
-//	@title			Wallet API
-//	@version		1.0
-//	@description	Sophisticated Wallet API
-//	@host			localhost:1323
+// @title			Wallet API
+// @version		1.0
+// @description	Sophisticated Wallet API
+// @host			localhost:1323
 func main() {
 	p, err := postgres.New()
 	if err != nil {
@@ -23,5 +23,6 @@ func main() {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	handler := wallet.New(p)
 	e.GET("/api/v1/wallets", handler.WalletHandler)
+	e.GET("/api/v1/users/:id/wallets", handler.WalletHandlerByUser)
 	e.Logger.Fatal(e.Start(":1323"))
 }
